--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Beranda Politeknik Negeri Jakarta</title>
+    <title>Depok Bike Sharing</title>
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
@@ -19,11 +19,10 @@
                     	<nav>
                             <ul class="menu">
                                 <li></li>
-								<li><a class="active" href="index.html">BERANDA</a></li>
-                                <li><a href="direktorat.html">DIREKTORAT</a></li>
-								<li><a href="jurusan.html">JURUSAN</a></li>
-                                <li><a href="galeri.html">GALERI</a></li>
-                                <li><a href="pendaftaran.html">PENDAFTARAN</a></li>
+								<li><a class="active" href="index.html">PENUGASAN</a></li>
+                                <li><a href="direktorat.html">ACARA</a></li>
+								<li><a href="jurusan.html">STASIUN</a></li>
+                                <li><a href="galeri.html">SEPEDA</a></li>
                             </ul>
                         </nav>
                     </div>
