form login, form pendaftaran

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 										<nav>
 										<ul class="menu">
 										<li></li>
-										<li><a href="direktorat.html">LOGIN</a></li>
-										<li><a href="pendaftaran.html">DAFTAR</a></li>
+										<li><a href="login.html">LOGIN</a></li>
+										<li><a href="pendaftaran.html">SIGN UP</a></li>
 										</ul>
 										</nav>
 										</div>
@@ -62,7 +62,7 @@
     </footer>
     <script type="text/javascript">
 			$(window).load(function() {
-			$('div.navigation').css({'width' : '320px', 'float' : 'right'});
+			$('div.navigation').css({'width' : '600px', 'float' : 'right'});
 			$('div.content').css('display', 'block');
 	
 			var onMouseOutOpacity = 0.5;
