--- a/login.html
+++ b/login.html
@@ -94,7 +94,7 @@ $("#tanggal").datepicker();
 								<li><a href="direktorat.html">DIREKTORAT</a></li>
                                 <li><a href="jurusan.html">JURUSAN</a></li>
                                 <li><a href="galeri.html">GALERI</a></li>
-                                <li><a class="active" href="pendaftaran.html">PENDAFTARAN</a></li>
+                                <li><a class="active" href="login.html">LOGIN</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -127,118 +127,26 @@ $("#tanggal").datepicker();
                                         <div class="wrapper">
                                             <div class="grid_12">
                                             	<div class="indent-left">
-                                                	<h3 class="p2">Login Bike Sharing</h3>
+                                                	<h3 class="p2">Form Login</h3>
                                                
 <table>
 <form name="register" id="contact-form" method="post" action="" enctype="multipart/form-data" onSubmit="return valregister()">
 <fieldset><br></br>
 <tr> 
-	<td> <b>Nama</b> </td>
+	<td> <b>Nomor KTP</b> </td>
 	<td> : </td>
 	<td> <input type="text" size="60" maxlength="60" name="isinama"></td>
 </tr>
+
 <tr>
-	<td> <b>Nomor Identitas<b> </td>
-	<td> : </td>
-	<td> <select name="identitas">
-	<option value="KTP">KTP</input>
-	<option value="Kartu Pelajar">Kartu Pelajar</input>
-	<option value="NISN">NISN</input>
-	</select>
-	</td>
-</tr>
-<tr> 
-	<td> </td>
-	<td> </td>
-	<td> <input type="text" size="60" maxlength="60" name="isiidentitas"></td>
-</tr>
-<tr> 
-	<td> <b>Tanggal Lahir<b> </td>
-	<td> : </td>
-	<td>  <input id="tanggal" type="text" size="60" maxlength="60">  </td>
-</tr>
-<tr> 
-	<td> <b>Jenis Kelamin<b> </td>
-	<td> : </td>
-	<td> <input type="radio" name="jenis" value="Laki-Laki">Laki-laki<br>
-	<input type="radio" name="jenis" value="Perempuan">Perempuan</td>
-</tr>
-<tr> 
-	<td> <b>Nomor Telepon<b> </td>
-	<td> : </td>
-	<td> <input type="text" size="60" maxlength="60" name="notelpon"></td>
-</tr>
-<tr> 
 	<td> <b>Email</b> </td>
 	<td> : </td>
 	<td> <input type="text" size="60" maxlength="60" name="isiemail"></td>
 </tr>
-<tr> 
-	<td> <b>Alamat<b> </td>
-	<td> : </td>
-	<td> <textarea cols="62" rows="4" name="isialamat">
-	</textarea></td>
-</tr>
-<tr>
-	<td> <b>Pilih Jalur Masuk<b> </td>
-	<td> : </td>
-	<td> <select name="jalur">
-	<option value="PMDK-PN">PMDK-PN</input>
-	<option value="UMPN">UMPN</input>
-	<option value="BIDIK MISI">BIDIK MISI</input>
-	</select>
-	</td>
-</tr>
-<tr>
-	<td> <b>Pilih Program Studi<b> </td>
-	<td> : </td>
-	<td> <select name="prodi">
-	<option value="Program Studi Teknik Mesin">Program Studi Teknik Mesin</input>
-	<option value="Program Studi Tekik Konversi Energi">Program Studi Tekik Konversi Energi</input>
-	<option value="Program Studi Alat Berat ">Program Studi Alat Berat </input>
-	<option value="Program Studi Manufaktur">Program Studi Manufaktur</input>
-	<option value="Program Studi Pembangkit Tenaga Listrik">Program Studi Pembangkit Tenaga Listrik</input>
-	<option value="Program Studi Konstruksi Gedung">Program Studi Konstruksi Gedung</input>
-	<option value="Konsentrasi Manajemen Konstruksi">Konsentrasi Manajemen Konstruksi</input>
-	<option value="Program Studi Perancangan Jalan dan Jembatan">Program Studi Perancangan Jalan dan Jembatan</input>
-	<option value="Konsentrasi Jalan Tol ">Konsentrasi Jalan Tol</input>
-	<option value="Program Studi Teknik Listrik">Program Studi Teknik Listrik</input>
-	<option value="Program Studi Teknik Elektronika Industri">Program Studi Teknik Elektronika Industri</input>
-	<option value="Program Studi Teknik Telekomunikasi">Program Studi Teknik Telekomunikasi</input>
-	<option value="Program Studi Instrumentasi dan Kontrol Industri">Program Studi Instrumentasi dan Kontrol Industri</input>
-	<option value="Program Studi Broadband Multimedia ">Program Studi Broadband Multimedia</input>
-	<option value="Program Studi Teknik Otomasi Listrik Industri">Program Studi Teknik Otomasi Listrik Industri</input>
-	<option value="Program Studi Teknik Informatika">Program Studi Teknik Informatika</input>
-	<option value="Program Studi Teknik Komputer dan Jaringan ">Program Studi Teknik Komputer dan Jaringan</input>
-	<option value="Program Studi Teknik Multimedia dan Jaringan">Program Studi Teknik Multimedia dan Jaringan</input>
-	<option value="Program Studi Teknik Grafika">Program Studi Teknik Grafika</input>
-	<option value="Program Studi Desain Grafis">Program Studi Desain Grafis</input>
-	<option value="Program Studi Penerbitan (Jurnalistik)">Program Studi Penerbitan (Jurnalistik)</input>
-	<option value="Program Studi Akuntansi">Program Studi Akuntansi</input>
-	<option value="Program Studi Keuangan dan Perbankan">Program Studi Keuangan dan Perbankan</input>
-	<option value="Program Studi Akuntansi Terapan">Program Studi Akuntansi Terapan</input>
-	<option value="Program Studi Keuangan dan Perbankan Terapan">Program Studi Keuangan dan Perbankan Terapan</input>
-	<option value="Program Studi Keuangan dan Perbankan Syariah">Program Studi Keuangan dan Perbankan Syariah </input>
-	<option value="Program Studi Manajemen Keuangan">Program Studi Manajemen Keuangan</input>
-	<option value="Program Studi Administrasi Bisnis">Program Studi Administrasi Bisnis</input>
-	<option value="Program Studi MICE">Program Studi MICE</input>
-	<option value="Program Studi Administrasi Bisnis Terapan">Program Studi Administrasi Bisnis Terapan</input>
-	</select>
-	</td>
-</tr>
-<tr> 
-	<td> <b>Asal SMA/MA/SMK<b> </td>
-	<td> : </td>
-	<td> <input type="text" size="60" maxlength="60" name="isiasalclub"></td>
-</tr>
 
-<tr> 
-	<td> <b>Upload Foto</b> </td>
-	<td> : </td>
-	<td> <input type="file" size="60" maxlength="60" name="Upload Foto"></td>
-</tr>
+
 <tr>
-	<td cols="3"> <input class="button" type="submit" name="tombol" value="DAFTAR"></a></td>
+	<td cols="3"> <input class="button" type="submit" name="tombol" value="LOGIN"></a></td>
 </tr>
 </fieldset>		
 </form>
