--- a/jurusan.html
+++ b/jurusan.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Jurusan di PNJ</title>
+    <title>Penugasan</title>
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">   
@@ -24,7 +24,7 @@
                     	<nav>
                             <ul class="menu">
                              	<li><a href="index.html">BERANDA</a></li>
-                                <li><a href="direktorat.html">DIREKTORAT</a></li>
+                                <li><a href="direktorat.html"></a></li>
 								<li><a class="active" href="jurusan.html">JURUSAN</a></li>
                                 <li><a href="galeri.html">GALERI</a></li>
                                 <li><a href="pendaftaran.html">PENDAFTARAN</a></li>      
