--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -81,6 +81,11 @@ $("#tanggal").datepicker();
 		}
 	</script>
 
+         <select name = "dropdown">
+            <option value = "Computer Architecture" selected>Computer Architecture</option>
+            <option value = "Java">Java</option>
+            <option value = "Discrete Mathematics">Discrete Mathematics</option>
+         </select>
 
 <body id="page5">
 	<header>
