--- a/admin.html
+++ b/admin.html
@@ -17,23 +17,23 @@
 		font-family: sans-serif;
 	}
  
-	.menu-malasngoding{
+	.menu-kelompok2{
 		background-color: #3141ff;
 	}
  
-	.menu-malasngoding ul {
+	.menu-kelompok2 ul {
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
 		overflow: hidden;
 	}
  
-	.menu-malasngoding > ul > li {
+	.menu-kelompok2 > ul > li {
 		float: left;
 	}
  
 	
-	.menu-malasngoding li a {
+	.menu-kelompok2 li a {
 		display: inline-block;
 		color: white;
 		text-align: center;
@@ -41,7 +41,7 @@
 		text-decoration: none;
 	}
  
-	.menu-malasngoding li a:hover{
+	.menu-kelompok2 li a:hover{
 		background-color: #2525ff;
 	}
  
@@ -78,7 +78,7 @@
  
 <header class="header">
 
-	<div class="menu-malasngoding">
+	<div class="menu-kelompok2">
  
 		<ul>
 			<li class="dropdown"><a href="#">Acara</a>
