--- a/anggota.html
+++ b/anggota.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">  
+	<link rel="stylesheet" href="css/dropdown.css" type="text/css" media="screen"> 
 	<script src="js/jquery-2.1.1.min.js" type="text/javascript" > </script>
-    <script type="text/javascript" src="js/jquery.pikachoose.js"></script>
-	<script type="text/javascript">
+   	<script type="text/javascript">
 			$(document).ready(
 				function (){
 					$("#pikame").PikaChoose({carousel:true});
@@ -82,23 +82,23 @@
 		font-family: sans-serif;
 	}
  
-	.menu-malasngoding{
+	.menu-kelompok2{
 		background-color: #3141ff;
 	}
  
-	.menu-malasngoding ul {
+	.menu-kelompok2 ul {
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
 		overflow: hidden;
 	}
  
-	.menu-malasngoding > ul > li {
+	.menu-kelompok2 > ul > li {
 		float: left;
 	}
  
 	
-	.menu-malasngoding li a {
+	.menu-kelompok2 li a {
 		display: inline-block;
 		color: white;
 		text-align: center;
@@ -106,7 +106,7 @@
 		text-decoration: none;
 	}
  
-	.menu-malasngoding li a:hover{
+	.menu-kelompok2 li a:hover{
 		background-color: #2525ff;
 	}
  
@@ -143,7 +143,7 @@
  
 <header class="header">
 
-	<div class="menu-malasngoding">
+	<div class="menu-kelompok2">
  
 		<ul>
 			
