add daftar_laporan_admin, rename daftar_laporan_petugas, modify admin.html, petugas.html, riwayat_transaksi.html

--- a/petugas.html
+++ b/petugas.html
@@ -27,22 +27,12 @@ $("#tanggal2").datepicker();
 	<div class="menu-kelompok2">
  
 		<ul>
-			
+			<li><a href="#">Daftar Penugasan</a></li>
 			<li><a href="#">Daftar Stasiun</a></li>
 			<li><a href="#">Daftar Sepeda</a></li>
-			<li class="dropdown"><a href="#">Peminjaman</a>
-				<ul class="isi-dropdown">
-					<li><a href="#">Buat Peminjaman</a></li>
-					<li><a href="#">Daftar Peminjaman</a></li>
-				</ul>
-			</li>
-			<li class="dropdown"><a href="#">Transaksi</a>
-				<ul class="isi-dropdown">
-					<li><a href="#">Topup Sharebike Pay</a></li>
-					<li><a href="#">Riwayat Transaksi</a></li>
-				</ul>
-			</li>
 			<li><a href="#">Daftar Acara</a></li>
+			<li><a href="#">Daftar Laporan</a></li>
+			<li><a href="#">Daftar Peminjaman</a></li>
 			<li><a href="#">Daftar Voucher</a></li>
 			<li><a href="#">Logout</a></li>
 			
