--- a/riwayat_transaksi.html
+++ b/riwayat_transaksi.html
@@ -62,7 +62,7 @@ $("#tanggal2").datepicker();
                                         <div class="wrapper">
                                             <div class="grid_12">
                                             	<div class="indent-left">
-                                                	<h3 class="p2">Riwayat Transaksi</h3>
+                                                	<h3 class="p2">Halaman Anggota - Riwayat Transaksi</h3>
 													
 
                   
