--- a/daftar_peminjaman.html
+++ b/daftar_peminjaman.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Halaman Daftar Penugasan Admin</title>
+    <title>Halaman Admin - Daftar Peminjaman</title>
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
@@ -12,7 +12,7 @@
 <script type="text/javascript"> 
 $("document").ready(function(){ 
 $("#tanggal").datepicker();
-$("#tanggal2").datepicker();
+
 }); 
 </script> 
 
@@ -23,29 +23,45 @@ $("#tanggal2").datepicker();
 <body id="page5">
 	<header class="header">
 
-	<div class="menu-kelompok2">
+	
+		<div class="menu-kelompok1">
  
 		<ul>
-			
-			<li><a href="#">Daftar Stasiun</a></li>
-			<li><a href="#">Daftar Sepeda</a></li>
-			<li class="dropdown"><a href="#">Peminjaman</a>
+			<li class="dropdown"><a href="#">Acara</a>
+			<ul class="isi-dropdown">
+					<li><a href="#">Tambah Acara</a></li>
+					<li><a href="#">Daftar Acara</a></li>
+				</ul></li>
+			<li class="dropdown"><a href="#">Petugas</a>
+			<ul class="isi-dropdown">
+					<li><a href="#">Tambah Penugasan</a></li>
+					<li><a href="#">Daftar Penugasan</a></li>
+				</ul></li>
+			<li class="dropdown"><a href="#">Stasiun</a>
 				<ul class="isi-dropdown">
-					<li><a href="#">Buat Peminjaman</a></li>
-					<li><a href="#">Daftar Peminjaman</a></li>
+					<li><a href="#">Tambah Stasiun</a></li>
+					<li><a href="#">Daftar Stasiun</a></li>
 				</ul>
 			</li>
-			<li class="dropdown"><a href="#">Transaksi</a>
+			<li class="dropdown"><a href="#">Sepeda</a>
 				<ul class="isi-dropdown">
-					<li><a href="#">Topup Sharebike Pay</a></li>
-					<li><a href="#">Riwayat Transaksi</a></li>
+					<li><a href="#">Tambah Sepeda</a></li>
+					<li><a href="#">Daftar Sepeda</a></li>
 				</ul>
 			</li>
-			<li><a href="#">Daftar Acara</a></li>
-			<li><a href="#">Daftar Voucher</a></li>
+			<li class="dropdown"><a href="#">Voucher</a>
+				<ul class="isi-dropdown">
+					<li><a href="#">Tambah Voucher</a></li>
+					<li><a href="#">Daftar Voucher</a></li>
+				</ul>
+			</li>
+			<li><a href="#">Daftar Peminjaman</a></li>
+			<li><a href="#">Daftar Laporan</a></li>
 			<li><a href="#">Logout</a></li>
 			
 		</ul>
+ 
+	
  
 	</div>
 </header>
@@ -62,38 +78,37 @@ $("#tanggal2").datepicker();
                                         <div class="wrapper">
                                             <div class="grid_12">
                                             	<div class="indent-left">
-                                                	<h3 class="p2">Halaman Admin - Daftar Penugasan</h3>
+                                                	<h3 class="p2">Halaman Admin - Daftar Peminjaman</h3>
 													
 
                   
 <table>
 <form name="register" id="contact-form" method="post" action="" enctype="multipart/form-data" onSubmit="return valregister()">
+
+
+
 <fieldset><br></br>
 <tr> 
-	<td> No </td>
-	<td> Petugas </td>
-	<td> Tanggal Mulai</td>
-	<td> Tanggal Akhir</td>
-	<td> Stasiun </td>
-	<td> Action</td>
-</tr>
-<tr> 
-	<td> 1 </td>
-	<td> 111111111 - </td>
-	<td> 15 April 2019</td>
-	<td> 15 Mei 2019 </td>
-	<td> 30000  </td>
-	<td> Sudah selesai</td>
+	<td> Nomor kartu anggota</td>
+	<td> Sepeda </td>
+	<td>  Stasiun </td>
+	<td> Waktu kembali</td>
+	<td> Biaya </td>
+	<td> Denda</td>
+	<td> Action [Admin]</td>
 </tr>
 
 <tr> 
-	<td> dst </td>
-	<td> dst </td>
-	<td> dst</td>
-	<td> dst</td>
-	<td> dst </td>
-	<td> dst</td>
+	<td> 13u78q</td>
+	<td>  11244 - BMX </td>
+	<td> 637 - Stasiun X</td>
+	<td> Stasiun Basdat Depok 1</td>
+	<td> -  </td>
+	<td> -</td>
+	<td> [Kembalikan]</td>
 </tr>
+
+
 
 </fieldset>		
 </form>
@@ -117,7 +132,7 @@ $("#tanggal2").datepicker();
         	<div class="container_12">
             	<div class="wrapper">
                 	<div class="grid_4">
-						<div>Copyright &copy; 2019 <a class="link color-3">Kelompok 2 - Matrikulasi Basdat</a></div>
+						<div>Copyright &copy; 2019 <a class="link color-3">Kelompok 1 - Matrikulasi Basdat</a></div>
                     </div>
                 </div>
             </div>
