modify anggota.html, daftar_sepeda.html, riwayat_transaksi.html, topup.html

--- a/anggota.html
+++ b/anggota.html
@@ -28,6 +28,7 @@ $("#tanggal2").datepicker();
  
 		<ul>
 			
+			<li><a href="#">Saldo Sharebike Pay:20000</a></li>
 			<li><a href="#">Daftar Stasiun</a></li>
 			<li><a href="#">Daftar Sepeda</a></li>
 			<li class="dropdown"><a href="#">Peminjaman</a>
