--- a/riwayat_transaksi.html
+++ b/riwayat_transaksi.html
@@ -26,6 +26,7 @@ $("#tanggal").datepicker();
  
 		<ul>
 			
+			<li><a href="#">Saldo Sharebike Pay:20000</a></li>
 			<li><a href="#">Daftar Stasiun</a></li>
 			<li><a href="#">Daftar Sepeda</a></li>
 			<li class="dropdown"><a href="#">Peminjaman</a>
