--- a/topup.html
+++ b/topup.html
@@ -27,7 +27,7 @@ $("#tanggal2").datepicker();
 	<div class="menu-kelompok1">
  
 		<ul>
-			
+			<li><a href="#">Saldo Sharebike Pay:20000</a></li>
 			<li><a href="#">Daftar Stasiun</a></li>
 			<li><a href="#">Daftar Sepeda</a></li>
 			<li class="dropdown"><a href="#">Peminjaman</a>
