modify update_acara.html, update_penugasan.html

--- a/daftar_penugasan_admin.html
+++ b/daftar_penugasan_admin.html
@@ -20,7 +20,7 @@ $("#tanggal2").datepicker();
 </head>
        
 
-<body id="page5">
+<body>
 	<header class="header">
 
 	<div class="menu-kelompok1">
