--- a/topup.html
+++ b/topup.html
@@ -12,16 +12,12 @@
 <script type="text/javascript"> 
 $("document").ready(function(){ 
 $("#tanggal").datepicker();
-$("#tanggal2").datepicker();
 }); 
 </script> 
-
-
 </head>
+  
 
-     
-
-<body id="page5">
+<body>
 	<header class="header">
 
 	<div class="menu-kelompok1">
