--- a/daftar_acara_anggota.html
+++ b/daftar_acara_anggota.html
@@ -63,7 +63,7 @@ $("#tanggal").datepicker();
                                         <div class="wrapper">
                                             <div class="grid_12">
                                                 <div class="indent-left">
-                                                    <h3 class="p2">Halaman Petugas - Daftar Acara </h3>
+                                                    <h3 class="p2">Halaman Anggota - Daftar Acara </h3>
                                                     
 
                   
